# fcore

./: meson.build
src/: meson.build
subprojects/: ferror.wrap
